# RL_brain_trainer

./: .dockerignore  .gitignore  KINEMATIC_FIRST_RESEARCH_PLAN.md  README.md  REPORT_EXTRA_DETAILS.md  V5_1_STAGE_SUMMARY.md  V5_1_TIMELINE.md  hrl_control.py  improvement_method.md  some_thoughts.md  some_thoughts_zh.md
hrl_ws/: README.md  pyproject.toml
hrl_ws/src/hrl_control_bridge/: package.xml  setup.cfg
hrl_ws/src/hrl_control_bridge/config/: bridge.yaml
hrl_ws/src/hrl_control_bridge/hrl_control_bridge/: __init__.py  bridge_node.py
hrl_ws/src/hrl_control_bridge/nodes/: hrl_control_bridge.py
hrl_ws/src/hrl_gazebo/: package.xml  setup.cfg
hrl_ws/src/hrl_gazebo/hrl_gazebo/: __init__.py
hrl_ws/src/hrl_gazebo/launch/: sim_bringup.launch.py
hrl_ws/src/hrl_gazebo/urdf/: manipulator.urdf.xacro  ros2_control.yaml
hrl_ws/src/hrl_gazebo/worlds/: empty.world
hrl_ws/src/hrl_trainer/: package.xml  setup.cfg
hrl_ws/src/hrl_trainer/config/: exp_2d_a0.yaml  exp_2d_a1.yaml  train.yaml  train_rl_brainer_v2.yaml  train_rl_brainer_v2_quick.yaml  train_rl_brainer_v3_hierarchy_meaning_ablation.yaml  train_rl_brainer_v3_l2_ablation_quick.yaml  train_rl_brainer_v3_l2_deterministic_plus_memory_quick.yaml  train_rl_brainer_v3_level5_pentagon_ablation.yaml  train_rl_brainer_v3_online_quick.yaml  train_rl_brainer_v3_online_velocity_patch_quick.yaml  train_rl_brainer_v3_online_velocity_patch_tuned.yaml  train_rl_brainer_v3_scene_patch_accel_curriculum_800.yaml  train_rl_brainer_v3_scene_patch_accel_no_obstacle_quick.yaml  train_rl_brainer_v3_scene_patch_accel_no_obstacle_residual_5000.yaml  train_rl_brainer_v3_scene_patch_accel_quick.yaml  train_rl_brainer_v3_three_layer_lstm_ablation_hard_disturbance.yaml  train_rl_brainer_v3_three_layer_lstm_ablation_hard_obstacles.yaml  train_rl_brainer_v3_three_layer_lstm_ablation_quick.yaml  train_rl_brainer_v4_complex_mvp.yaml  train_rl_brainer_v4_complex_mvp_velocity.yaml  train_rl_brainer_v4_no_obstacle_mvp.yaml  train_rl_brainer_v4_no_obstacle_residual.yaml  v5_curriculum_easy.yaml  v5_curriculum_hard.yaml  v5_curriculum_medium.yaml  v5_slot_map.yaml  v5_workspace_zone_map.yaml  v5_wp0_diagnostics.yaml  wp0_config.yaml
hrl_ws/src/hrl_trainer/hrl_trainer/: __init__.py  config.py
hrl_ws/src/hrl_trainer/hrl_trainer/kinematic_phase1/: __init__.py  train_route_curriculum.py  train_workspace_expansion.py
hrl_ws/src/hrl_trainer/hrl_trainer/sim2d/: __init__.py  diag_l0_rbf_straight.py  diag_l1_planner_straight.py  diagnostics_report_template.md  env.py  planner.py  run_v3_hierarchy_meaning_ablation.py  train_rl_brainer_v2.py  train_rl_brainer_v3_online.py  train_rl_brainer_v4.py  train_sim2d.py  visualize_v3_episode.py  visualize_v4_episode.py
hrl_ws/src/hrl_trainer/hrl_trainer/v5/: __init__.py  artifacts.py  benchmark_m2_8_formal_comparison.py  benchmark_rl_l2_v0.py  benchmark_rule_l2_v0.py  curriculum.py  demo_live_vlm_gz.py  eval_harness.py  execute_tray_ik_path.py  intent_layer.py  l2_policy.py  perception_adapter.py  phase3a_controlled_sim.py  phase3a_runtime_node.py  pipeline.py  qwen_l1_client.py  qwen_mcp_server.py  qwen_mcp_tools.py  reward_composer.py  rl_action.py  rl_l2_v0.py  rl_observation.py  rollout_integrity.py  rule_l2_v0.py  runtime_model_registry.py  target_marker_node.py  task1_train.py  trainer_loop.py  tray_waypoint_plan.py  workspace_zone_map.py  wp3_gates.py
hrl_ws/src/hrl_trainer/nodes/: hrl_policy_node.py  hrl_trainer.py
hrl_ws/src/hrl_trainer/scripts/: verify_v5_1_rack_joint_effect.py
hrl_ws/src/hrl_trainer/test/: test_v5_1_reward.py
hrl_ws/src/hrl_trainer/tests/: test_kinematic_phase1_approach_reward.py  test_kinematic_phase1_env.py  test_kinematic_phase1_eval.py  test_kinematic_phase1_reward.py  test_kinematic_phase1_split.py  test_v5_1_contracts.py  test_v5_1_curriculum.py  test_v5_1_ee_fk_external_consistency.py  test_v5_1_gates.py  test_v5_1_l3_executor.py  test_v5_1_layer_logging.py  test_v5_1_pipeline_e2e.py  test_v5_1_reward.py  test_v5_1_runtime_ros2.py  test_v5_1_sac_agent.py  test_v5_1_sac_torch.py  test_v5_1_safety_watchdog.py  test_v5_artifacts.py  test_v5_benchmark_rule_l2_v0.py  test_v5_eval_harness.py  test_v5_m2_3_integration_loop.py  test_v5_m2_3_reward_curriculum.py  test_v5_m2_7_training_loop_integration.py  test_v5_m2_8_formal_comparison.py  test_v5_phase3a_controlled_sim.py  test_v5_phase3a_runtime.py  test_v5_qwen_l1_client.py  test_v5_qwen_mcp_bridge.py  test_v5_rl_l2_v0.py  test_v5_rule_l2_v0.py  test_v5_runtime_parity_check.py  test_v5_task1_failfast_no_motion.py  test_v5_task1_gazebo_auto_reset.py  test_v5_task1_gazebo_ee_source.py  test_v5_task1_hybrid_macro_contract.py  test_v5_task1_j2_saturation_fix.py  test_v5_task1_l3_action_exec.py  test_v5_task1_l3_replay_checkpoint.py  test_v5_task1_rbt11_task1_contract.py  test_v5_task1_training_bootstrap.py  (+6 more)
(+5397 files in other folders)
