[project]
name = "hrl-ws"
version = "0.1.0"
description = "ROS 2 workspace for hierarchical reinforcement learning control experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "scipy>=1.10",
    "tensorboard>=2.12",
    "qpsolvers>=3.4",
    "osqp>=0.6",
    "pyyaml>=6.0",
]

[tool.uv]
package = true
