[metadata]
name = hrl_control_bridge
version = 0.1.0
author = HRL Maintainer
author_email = maintainer@example.com
description = ROS 2 bridge between ros2_control and the HRL trainer.
license = Apache License 2.0

[options]
packages = find:
install_requires =
    numpy
    rclpy
    std_msgs
    std_srvs
    sensor_msgs
    control_msgs
    trajectory_msgs
zip_safe = False
include_package_data = True

[options.package_data]
hrl_control_bridge =
    config/*.yaml
    nodes/*.py

[options.entry_points]
console_scripts =
    hrl_control_bridge = hrl_control_bridge.nodes.hrl_control_bridge:main
