<?xml version="1.0"?>
<package format="3">
  <name>hrl_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo bringup package for the Hierarchical RL manipulator training stack.</description>
  <maintainer email="maintainer@example.com">HRL Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <exec_depend>ament_copyright</exec_depend>
  <exec_depend>ament_lint_auto</exec_depend>
  <exec_depend>ament_lint_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
