[metadata]
name = hrl_gazebo
version = 0.1.0
author = HRL Maintainer
author_email = maintainer@example.com
description = Gazebo bringup for HRL manipulator training.
license = Apache License 2.0

[options]
packages = find:
install_requires =
    rclpy
zip_safe = False
include_package_data = True

[options.package_data]
hrl_gazebo =
    launch/*.py
    urdf/*.xacro
    urdf/*.yaml
    worlds/*.world

[options.entry_points]
console_scripts =
