<?xml version="1.0"?>
<package format="3">
  <name>hrl_trainer</name>
  <version>0.1.0</version>
  <description>Hierarchical reinforcement learning trainer nodes for the HRL workspace.</description>
  <maintainer email="maintainer@example.com">HRL Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>hrl_brain_trainer</depend>
  <depend>numpy</depend>
  <depend>torch</depend>
  <depend>osqp</depend>
  <depend>qpsolvers</depend>
  <depend>pyyaml</depend>
  <depend>tensorboard</depend>

  <exec_depend>ament_lint_auto</exec_depend>
  <exec_depend>ament_lint_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
