[metadata]
name = hrl_trainer
version = 0.1.0
author = HRL Maintainer
author_email = maintainer@example.com
description = Hierarchical reinforcement learning trainer nodes.
license = Apache License 2.0

[options]
packages = find:
install_requires =
    numpy
    torch
    rclpy
    std_msgs
    std_srvs
    sensor_msgs
    pyyaml
    tensorboard
zip_safe = False
include_package_data = True

[options.package_data]
hrl_trainer =
    config/*.yaml
    nodes/*.py
hrl_brain_trainer =
    *.py

[options.entry_points]
console_scripts =
    hrl_trainer = hrl_trainer.nodes.hrl_trainer:main
    hrl_policy_node = hrl_trainer.nodes.hrl_policy_node:main
