[metadata]
name = hrl_trainer
version = 0.1.0
author = HRL Maintainer
author_email = maintainer@example.com
description = Hierarchical reinforcement learning trainer nodes.
license = Apache License 2.0

[options]
packages = find:
install_requires =
    numpy
    torch
    rclpy
    std_msgs
    std_srvs
    sensor_msgs
    pyyaml
    tensorboard
zip_safe = False
include_package_data = True

[options.package_data]
hrl_trainer =
    config/*.yaml
    nodes/*.py
hrl_brain_trainer =
    *.py

[options.entry_points]
console_scripts =
    hrl_trainer = hrl_trainer.nodes.hrl_trainer:main
    hrl_policy_node = hrl_trainer.nodes.hrl_policy_node:main
    hrl_sim2d_eval = hrl_trainer.sim2d.train_sim2d:main
    hrl_sim2d_train_dqn = hrl_trainer.sim2d.train_tactical_dqn:main
    hrl_sim2d_train_v2 = hrl_trainer.sim2d.train_rl_brainer_v2:main
